Fix scrollbars for top bar icons on windows

--- a/app/sass/top_bar.sass
+++ b/app/sass/top_bar.sass
@@ -19,6 +19,7 @@ $twitter: #1da1f2
 
   li
     display: inline-block
+    overflow: visible
 
 
     &.name
@@ -41,6 +42,7 @@ $twitter: #1da1f2
 
       color: $light-text-primary
       transition: color .2s ease
+      overflow: visible
 
       &::after
         content: ''
